All
Added Favourites Menu plugin.

Updated addresses.
Removed plugins that are now part of KKEdit.
Added Debugger.
RemoteEdit plugin now gtk2/3.
Added build instructions to README.
Fixed occasional segfault when unloading plugs.
FileBrowser plugin now gtk2/3.
OpenUri plugin now gtk2/3.
TerminalPane plugin now gtk2/3.
SessionManager plugin now gtk2/3.
example-plugin now gtk2/3.
Clipboard plugin now gtk2/3.
New Project plugin now gtk2/3.
Adding gtk3 support.

All
Updated webpage link
Updated licence preamble in source files.

OpenUri
0.3.0
OpenUri plugin now gtk2/3.
Changed deprecated g_signal_connect to g_signal_connect.
Changed deprecated G_OBJECT etc to G_OBJECT.
New Makefile.

0.0.3
Fixed open-xdg blocking.

All
Now uses plugins-gtk/plugins-qt depending on the PLATFORM variable in the makefile's.

ClipboardPlugin
0.3.0
Clipboard plugin now gtk2/3.
Changed deprecated g_signal_connect to g_signal_connect.
Changed deprecated G_OBJECT etc to G_OBJECT.
New Makefile.

0.0.3
Selecting an item from the clipboard menu now recopies that text back to the clipboard instead of inserting it.
Fixed locale folder being set properly in makefile
Fixed makefile.
Fixed about box translations.
Added French translations.
0.0.2
Fixed Makefile
0.0.1
First commit.

example-plugin
0.3.0
example-plugin now gtk2/3.
Changed deprecated g_signal_connect to g_signal_connect.
Changed deprecated G_OBJECT etc to G_OBJECT.
New Makefile.

0.0.3-1.0.1
Removed local version of help.html now redirects to website ( more up to date ).
Fixed locale folder being set properly in makefile
Fixed makefile.
Fixed about box translations.
Updating ...
0.0.2
Fixed Makefile
0.0.1
First commit.

FileBrowser
0.3.0
Added "open In Browser" to context menu in document.
Removed annoying auto expand of browser pane.
FileBrowser plugin now gtk2/3.
Changed deprecated g_signal_connect to g_signal_connect.
Changed deprecated G_OBJECT etc to G_OBJECT.
New Makefile.

0.0.8
Fixed locale folder being set properly in makefile