@@ -1,0 +1,11 @@
+{
+global:	addToGui;
+		doAbout;
+		enablePlug;
+		saveFile;
+		g_module_unload;
+		g_module_check_init;
+
+local: *;
+
+};
