@@ -1,4 +1,5 @@
 All
+Added Save History plugin.
 Added Favourites Menu plugin.
 
 Updated addresses.
